--- a/index.html
+++ b/index.html
@@ -128,19 +128,69 @@
 </div>
 
 <script>
-    const titles = [
-        { title: "The number of children recruited by armed groups in Haiti increased by 70%", description: "A sharp rise in child recruitment has been reported amid worsening political instability." },
-        { title: "Emergency medical teams deployed to earthquake zones", description: "Swift action saves countless lives in disaster-stricken areas." },
-        { title: "Access to clean water improves life expectancy by 15%", description: "Water sanitation initiatives yield remarkable health benefits." },
-        { title: "Vaccination drives reach over 1 million children in rural areas", description: "Expanded healthcare access is transforming rural communities." },
-        { title: "Food insecurity rises in conflict zones worldwide", description: "Humanitarian aid struggles to meet growing demands in crisis areas." },
-        { title: "UN warns of severe droughts affecting millions in Africa", description: "Climate change impacts are intensifying food and water shortages." },
-        { title: "Education programs empower refugee girls", description: "Breaking barriers to education changes lives in refugee camps." },
-        { title: "Millions at risk due to floods in Southeast Asia", description: "Emergency relief teams mobilize as monsoon floods devastate regions." },
-        { title: "Clean cooking initiatives reduce indoor air pollution", description: "Safer stoves improve health for families in developing countries." },
-        { title: "Malnutrition treatment saves 500,000 children annually", description: "Therapeutic food programs are a lifeline for the most vulnerable." },
-        // Add up to 250 titles and descriptions here
-    ];
+const titles = [
+    { title: "The number of children recruited by armed groups in Haiti increased by 70%", description: "A sharp rise in child recruitment has been reported amid worsening political instability." },
+    { title: "Emergency medical teams deployed to earthquake zones", description: "Swift action saves countless lives in disaster-stricken areas." },
+    { title: "Access to clean water improves life expectancy by 15%", description: "Water sanitation initiatives yield remarkable health benefits." },
+    { title: "Vaccination drives reach over 1 million children in rural areas", description: "Expanded healthcare access is transforming rural communities." },
+    { title: "Food insecurity rises in conflict zones worldwide", description: "Humanitarian aid struggles to meet growing demands in crisis areas." },
+    { title: "UN warns of severe droughts affecting millions in Africa", description: "Climate change impacts are intensifying food and water shortages." },
+    { title: "Education programs empower refugee girls", description: "Breaking barriers to education changes lives in refugee camps." },
+    { title: "Millions at risk due to floods in Southeast Asia", description: "Emergency relief teams mobilize as monsoon floods devastate regions." },
+    { title: "Clean cooking initiatives reduce indoor air pollution", description: "Safer stoves improve health for families in developing countries." },
+    { title: "Malnutrition treatment saves 500,000 children annually", description: "Therapeutic food programs are a lifeline for the most vulnerable." },
+    { title: "Humanitarian corridors open in conflict-ridden zones", description: "Increased cooperation allows aid to reach those in dire need." },
+    { title: "Women-led farming initiatives fight hunger", description: "Empowering women farmers yields transformative results for communities." },
+    { title: "Mobile clinics provide vital care to rural populations", description: "Healthcare on wheels is bridging the gap for underserved areas." },
+    { title: "Child labor declines in regions with accessible education", description: "School programs help children escape cycles of poverty." },
+    { title: "Energy-efficient housing solutions aid refugees", description: "Innovative housing cuts costs and improves living conditions." },
+    { title: "Aid workers confront growing challenges in disaster zones", description: "Safety concerns and funding shortfalls hinder relief efforts." },
+    { title: "New vaccines combat outbreaks in fragile regions", description: "Health organizations respond swiftly to prevent pandemics." },
+    { title: "Solar-powered water pumps transform arid lands", description: "Sustainable solutions are bringing water to drought-prone areas." },
+    { title: "Microfinance loans boost small-scale businesses", description: "Access to capital helps families lift themselves out of poverty." },
+    { title: "Climate-resilient seeds improve harvests", description: "Farmers thrive with crops suited to changing weather patterns." },
+    { title: "Malaria prevention programs save thousands annually", description: "Increased use of insecticide-treated nets shows dramatic impact." },
+    { title: "Remote learning tools support refugee students", description: "Online education platforms provide stability for displaced children." },
+    { title: "Mental health initiatives expand in conflict zones", description: "Trauma counseling aids communities affected by violence." },
+    { title: "Humanitarian airlifts deliver critical supplies", description: "Aviation is proving essential in reaching inaccessible areas." },
+    { title: "Sea-level rise threatens coastal livelihoods", description: "Communities adapt to the realities of climate change." },
+    { title: "Programs help disabled persons reintegrate into society", description: "Aid efforts focus on accessibility and inclusivity." },
+    { title: "Deforestation drives new initiatives for reforestation", description: "Tree-planting projects restore ecosystems and combat erosion." },
+    { title: "Renewable energy powers remote health facilities", description: "Solar panels enable refrigeration of life-saving medicines." },
+    { title: "Sanitation campaigns drastically reduce cholera cases", description: "Public health outreach saves lives in vulnerable areas." },
+    { title: "Innovative food aid packaging reduces waste", description: "Biodegradable materials help aid workers leave no trace." },
+    { title: "Displaced families find hope in temporary settlements", description: "Community-led initiatives improve life in refugee camps." },
+    { title: "International donors pledge billions for food aid", description: "Historic funding drives hope for combating famine." },
+    { title: "Wildfire management programs reduce risk in arid regions", description: "Prevention strategies save lives and protect ecosystems." },
+    { title: "Access to internet boosts opportunities for remote workers", description: "Digital connectivity expands economic potential in rural areas." },
+    { title: "Flood-resistant infrastructure built in vulnerable regions", description: "Engineering solutions mitigate disaster risks." },
+    { title: "Youth-focused programs inspire future leaders", description: "Empowerment initiatives equip young people to drive change." },
+    { title: "Collaborative farming practices restore soil health", description: "Regenerative agriculture supports food security." },
+    { title: "Electric bikes improve mobility for aid workers", description: "Sustainable transport options enhance efficiency." },
+    { title: "Wildlife conservation efforts protect biodiversity", description: "Anti-poaching initiatives save endangered species." },
+    { title: "Clean energy projects light up rural schools", description: "Renewable power ensures reliable access to education." },
+    { title: "Conflict resolution workshops foster peace", description: "Dialogue-based initiatives reduce violence in divided communities." },
+    { title: "Drought-resistant maize seeds feed millions", description: "Biotechnology offers hope for sustainable agriculture." },
+    { title: "Emergency shelters built in record time", description: "Rapid deployment of modular housing aids disaster recovery." },
+    { title: "Nutrition supplements combat stunting in children", description: "Fortified foods ensure healthy growth during critical years." },
+    { title: "Local food markets revive economies in post-crisis zones", description: "Investment in small businesses supports recovery." },
+    { title: "Tree nurseries restore degraded lands", description: "Reforestation projects bring new life to barren regions." },
+    { title: "Water pipeline projects reduce walking times for families", description: "Access to nearby clean water transforms daily life." },
+    { title: "Anti-trafficking campaigns rescue thousands annually", description: "Collaborative efforts disrupt dangerous criminal networks." },
+    { title: "Youth sports programs inspire teamwork and resilience", description: "Athletics empower communities and foster unity." },
+    { title: "Training programs for aid workers expand skillsets", description: "Professional development ensures high-impact responses." },
+    { title: "Ocean clean-up efforts tackle plastic pollution", description: "Innovative technologies make strides in removing debris." },
+    { title: "Tech-driven data analysis aids disaster planning", description: "AI tools revolutionize emergency preparedness." },
+    { title: "Social enterprises empower women artisans", description: "Economic opportunities create lasting change for families." },
+    { title: "Orphanages transformed into community learning centers", description: "Holistic care programs support vulnerable children." },
+    { title: "River conservation projects improve water quality", description: "Local partnerships protect vital waterways." },
+    { title: "Temporary schooling gives refugee kids a second chance", description: "Education centers offer stability and hope for displaced youth." },
+    { title: "Emergency cash transfers stabilize families in crisis", description: "Flexible aid empowers recipients to meet urgent needs." },
+    { title: "Mobile apps guide farmers through sustainable practices", description: "Tech innovations drive agricultural resilience." },
+    { title: "Programs connect urban gardens with food banks", description: "Urban agriculture reduces food waste and feeds the hungry." },
+    { title: "Wildfire relief efforts rebuild devastated communities", description: "Survivors receive essential support to start anew." }
+];
+
 
     const infoBox = document.getElementById('info-box');
     const randomTitle = document.getElementById('random-title');
